--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 *{
-    font-family: 'Nova Square', cursive;
+    font-family: 'nova square', cursive;
+}
+body{
+    background-color: var(--main);
 }
 :root{
     --main:#ececec;
@@ -20,7 +23,7 @@
 }
 .img-bg{
     height: 100vh;
-    background-image:url(./media/mountains.png) , linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(236,236,236,1) 100%) , url(./media/switzerland-862870_1920.jpg);
+    background-image:url(./media/mountains2.png) , linear-gradient(0deg, rgba(0,0,0,0) 0%, var(--main) 100%) , url(./media/switzerland-862870_1920.jpg);
     background-size: 100%, cover ,cover;
     background-repeat: no-repeat;
     background-position: bottom, center, center;
@@ -30,4 +33,34 @@
 h1{
     font-size: 7vmax;
     color: var(--sec);
+}
+#quotes::before{
+    font-size: large;
+    content: ' " ' ;
+    color: var(--sec);
+}
+#quotes::after{
+    font-size: large ;
+    content: ' " ' ;
+    color: var(--sec);
+    position: absolute;
+    bottom: 0%;
+}
+.item{
+    font-size: 3rem;
+    color: var(--sec);
+}
+.redbar{
+    border-bottom: 10px, solid, var(--sec) ;
+}
+.bordo{
+    border-bottom: 3px solid darkred;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+.bi-circle{
+    position: absolute;
+    background-color: var(--main);
 }
