--- a/style.css
+++ b/style.css
@@ -164,3 +164,11 @@ h6 {
     height: 250px;
     border: 2px solid var(--sec);
 }
+/* section background with red trees */
+.img-bg-3 {
+    height: 55vh;
+    background-image: url(./media/other.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: bottom;
+}
